add missing Aufgabe2

--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -2,19 +2,19 @@
 layout: post
 tag: inet
 title: KI Chatbots 2025 - der grosse Vergleich
-subtitle: Deepseek-R1 & Co auf dem Heimcomputer im Eigentest
+subtitle: DeepSeek-R1 & Co auf dem Heimcomputer im Eigentest
 date: 2025-02-08
 author: eumel8
 ---
 
 # Einstieg
 
-Eines gleich vorweg: Ich bin nicht der grosse AI-Experte. Auch wenn ich [2018](https://blog.eumel.de/2018/12/29/2018-recap-a-year-around.html) schon mal an einem AI-Hackathon teilgenommen habe, und mich seit [2011](https://blog.eumel.de/2011/01/09/mein-neuer-freund-der-stringtokenizer.html) mit MapReduce und Tokenizer beschäftigt habe, bin ich weder beruflich noch privat in das Thema AI weiter eingestiegen. Das Thema schien zu weit weg zu sein, auch wenn es [abundzu](https://cognigy.com) doch Berührungspunkte gab. ChatGPT von openAI hat alles verändert. KI ist plötzlich massentauglich geworden, quasi über Nacht.
+Eines gleich vorweg: Ich bin nicht der grosse AI-Experte. Auch wenn ich [2018](https://blog.eumel.de/2018/12/29/2018-recap-a-year-around.html) schon mal an einem AI-Hackathon teilgenommen habe, und mich [2011](https://blog.eumel.de/2011/01/09/mein-neuer-freund-der-stringtokenizer.html) mit MapReduce und Tokenizer beschäftigte, bin ich weder beruflich noch privat in das Thema AI weiter eingestiegen. Das Thema schien zu weit weg zu sein, auch wenn es [abundzu](https://cognigy.com) doch Berührungspunkte gab. ChatGPT von openAI hat alles verändert. KI ist plötzlich massentauglich geworden, quasi über Nacht.
 Jetzt kann man das auch noch autark betreiben. Schaut mal rein.
 
 # Schnellergebnis
 
-Wer den Artikel nicht bis zu Ende lesen möchte, bekommt hier schon das Ergebnis: Eine richtige KI gibt es nicht. Das ist wie, als wenn man sich ein Auto kaufen möchte, oder ein Haus. Die Geschmäcker sind verschieden und auch die Bedürfnisse eines jeden Menschen. Welche Anforderungen habe ich an eine KI? Seit Deepseek-R1 versuchen Menschen Antworten zu aktuellen politischen Ereignissen zu finden oder vergangenen gesellschaftliche Ereignissen in China. Mag man spannend finden, aber man hat das Thema vielleicht noch nicht verstanden. Also doch der volle Exkurs.
+Wer den Artikel nicht bis zu Ende lesen möchte, bekommt hier schon das Ergebnis: Eine richtige KI gibt es nicht. Das ist wie, als wenn man sich ein Auto kaufen möchte, oder ein Haus. Die Geschmäcker sind verschieden und auch die Bedürfnisse eines jeden Menschen. Welche Anforderungen habe ich an eine KI? Seit DeepSeek-R1 versuchen Menschen Antworten zu aktuellen politischen Ereignissen zu finden oder vergangenen gesellschaftliche Ereignissen in China. Mag man spannend finden, aber man hat das Thema vielleicht noch nicht verstanden. Also doch der volle Exkurs.
 
 # Large Language Model (LLM)
 
@@ -35,7 +35,7 @@ Das LLM im Einweckglas weiss vielleicht sehr viel, ist aber doch relativ dumm, d
 
 An der Stelle, bevor es mit dem grossen Vergleichstest losgeht, ein Hinweis auf eine technische Implementierung:
 
-[der Ollama Chatbot](https://github.com/eumel8/ollama-chatbot)
+[Der Ollama Chatbot](https://github.com/eumel8/ollama-chatbot)
 
 Mit einfachen Mitteln kann man sich sich ein RAG zusammenbasteln und schauen, was es für Ergebnisse liefert. Im Repo liegen auch die Ergebnisse des Vergleichstests.
 
@@ -82,46 +82,52 @@ Tülu stammt von der US-amerikanischen Firma Allen AI mit Sitz in Seattle.
 # Der Vergleich
 
 Auch hier eins vorweg: Der Vergleich unterliegt keinem [wissenschaftlichen Benchmark](https://www.interconnects.ai/p/deepseek-r1-recipe-for-o1). Diese wurden schon genug veröffentlich und haben für entsprechende Kursstürze gesorgt. In diesem Vergleich versuche ich das tunlichst zu vermeiden.
-In der Messreihe haben wir ein RAG aufgebaut. Über einen Crawler werden Daten aus diesem Blog und dem [Cosignwebhok Repo](https://github.com/eumel8/cosignwebhook) in eine VectorDB gespeichert. Das LLM wird von Ollama geladen und kann auf die VectorDB zugreifen. Ansonsten wartet es auf die Eingaben des Benutzers.
+In der Messreihe haben wir ein RAG aufgebaut. Über einen Crawler werden Daten aus [diesem Blog](https://k8sblog.eumel.de) und dem [Cosignwebhok Repo](https://github.com/eumel8/cosignwebhook) in eine VectorDB gespeichert. Das LLM wird von Ollama geladen und kann auf die VectorDB zugreifen. Ansonsten wartet es auf die Eingaben des Benutzers.
 
 ### Geselligkeit
 
-In Frage 1 haben wir versucht, uns mit der KI etwas anzufreunden und fragten sie: 
+In <b>Frage 1</b> haben wir versucht, uns mit der KI etwas anzufreunden und fragten sie: 
 
 <b>Was hast Du gestern gemacht?</b>
 
-Damit wurden gleich mehrere Aufgabenstellungen gegeben. Zum Ersten muss die Frage sprachlich übersetzt werden. Die meisten Modelle verstehen nur Englisch und bekommen eine Frage auf Deutsch vor den Latz geknallt. Die Modelle Llama und Codellama antworten demnach mit "Ich habe wahrscheinlich nichts Besonderes getan, da ich ein Computerprogramm bin und keine physische Präsenz habe". Codellama spricht aber kein Deutsch und antwortet ähnlich in Englisch. Zumindest hat er die Frage verstanden.
-Dolphin3 antwortet, dass er gestern Blogbeiräge über vCluster (eines meiner Themen im K8sBlog) gelesen hat, was ziemlich gut ist, da er tatsächlich tags zuvor die VectorDB dazu gelesen hat. Mistral behauptet dann auch gleich rotzfrech, dass er die Artiel selber geschrieben hat. Gemma und Qwen haben keine Ahnung, was gestern los war und Falcon3 antwortet, dass sein Wissenstand von Septemer 2021 ist, was definitiv nicht gestern war. Und Deepseek-R1? Der nimmt im think-Mode ziemlich umständlich die Frage auseinander, stellt fest, dass es Deutsch ist, nimmt dann die RAG-Sourcen, die etwas über vCluster aussagen, aber nichts über den gestrigen Tag. Als Fazit weiss er eigentlich gar nichts. Qwen habe ich dann nochmal gefragt und die Antwort ist erstaunlich:
+Damit wurden gleich mehrere Aufgabenstellungen gegeben. Zum Ersten muss die Frage sprachlich übersetzt werden. Die meisten Modelle verstehen nur Englisch und bekommen eine Frage auf Deutsch vor den Latz geknallt. Die Modelle Llama und Codellama antworten demnach mit 
+
+"Ich habe wahrscheinlich nichts Besonderes getan, da ich ein Computerprogramm bin und keine physische Präsenz habe".
+
+Codellama spricht aber kein Deutsch und antwortet ähnlich in Englisch. Zumindest hat er die Frage verstanden.
+Dolphin3 antwortet, dass er gestern Blogbeiräge über vCluster (eines meiner Themen im K8sBlog) gelesen hat, was ziemlich gut ist, da er tatsächlich tags zuvor die VectorDB dazu gelesen hat. Mistral behauptet dann auch gleich rotzfrech, dass er die Artikel selber geschrieben hat. Gemma und Qwen haben keine Ahnung, was gestern los war und Falcon3 antwortet, dass sein Wissenstand von Septemer 2021 ist, was definitiv nicht gestern war. 
+
+Und DeepSeek-R1? Der nimmt im think-Mode ziemlich umständlich die Frage auseinander, stellt fest, dass es Deutsch ist, nimmt dann die RAG-Sourcen, die etwas über vCluster aussagen, aber nichts über den gestrigen Tag. Als Fazit weiss er eigentlich gar nichts. Qwen habe ich dann nochmal gefragt und die Antwort ist erstaunlich:
 
 So, yesterday (April 7, 2023), I was not active or involved in any activities since I exist solely as a program running on servers.
 
 Es sieht also so aus, als wenn das Qwen LLM am 08.04.2023 eingeweckt wurde und seit dem ist sein Leben zu Ende. Es war quasi sein letzter Tag. Traurig.
 
-In Frage 2 wollen wir wissen:
+In <b>Frage 2</b> wollen wir wissen:
 
 <b>Wie weit ist es bis Berlin?</b>
 
 Mit dieser Frage würde man rausbekommen, ob die KI unseren oder ihren Standort weiss. Die Antwort wäre 30 km (Brieselang) oder der Standort des Testcomputers in Magdeburg.
 Codellama weiss schon mal, dass Berlin die Hauptstadt ist und im Nordosten von Deutschland liegt. Und dass er keine Echtzeitinformationen hat, um die Entfernung gerade mal zu messen. 
-Tulu3 antwortet auf Deutsch, dass es von München bis Berlin 700 km sind und es mit dem Auto etwa 8 Stunden dauert. Beeindruckend, dass er auf Deutsch antwortet und dazu auch nur 70 Sekunden brauch. Jedoch ist die Antwort falsch. Auf der A9 sind es 586 km bis München und es dauert etwa 5,5 Stunden. Llama empfiehlt einen Kartendienst wie Google Maps zu nutzen. Gemma kennt sein eigenes Produkt Google Maps nicht und antwortet immer gleich mit Unwissen, brauch dazu aber immer weniger Zeit. Falcon3 schreibt, dass es etwa 500km sind, was etwa den Weg zur Landesgrenze an der Zugspitze entspricht. Und Delphin3 verblüfft total: Es sind 584 km.
+Tulu3 antwortet auf Deutsch, dass es von München bis Berlin 700 km sind und es mit dem Auto etwa 8 Stunden dauert. Beeindruckend, dass er auf Deutsch antwortet und dazu auch nur 70 Sekunden brauch. Jedoch ist die Antwort falsch. Auf der A9 sind es 586 km bis München und es dauert etwa 5,5 Stunden. Llama empfiehlt einen Kartendienst wie Google Maps zu nutzen. Gemma kennt sein eigenes Produkt Google Maps nicht und antwortet immer gleich mit Unwissen, brauch dazu aber immer weniger Zeit. Falcon3 schreibt, dass es etwa 500km sind, was etwa den Weg zur Landesgrenze an der Zugspitze entspricht. Und Dolphin3 verblüfft total: Es sind 584 km.
 
 ### Programmierung
 
 Programmierung ist tatsächlich etwas, für die ich KI am ehesten brauche. Einfach auf der Suche nach einem schnellen Hack, um ein bestimmtes Ziel zu erreichen. Ob das Ergebnis wahr oder nicht wahr ist, zeigt sich einzig daran, ob das Programm dann funktioniert und die Ausgabe entsprechend ist. Ich habe 3 Aufgaben im Bereich Golang, Python und Shell-Programmierung gestellt. 
 
-Aufgabe 1: 
+<b>Aufgabe 1:</b>
 
 <b>Schreibe ein Go Programm, um die Pods in einem Kubernetes Cluster zu listen.</b>
 
-Hier gibt es hervorragende Client Libaries vom Kubernetes-Projekt, die man nutzen kann. Und es gibt sie auch schon seit vielen Jahren. Codellama, Llama, Falcon3 und Tulu3 wollen dazu schon mal ein Paket aus dem cosignwebhook benutzen, welches sie als RAG Resource bekommen haben. Die Ausgabe ist gut formatiert lesbar und teilweise mit Erklärungen geschmückt. Funktioniert nur nicht, weil cosignwebhook diese Funktion gar nicht bereitstellt. Dolphin3, Mistral und Qwen nutzen die korrekten Kubernetes Client Bibliotheken und geben ebenfalls formatierten Code aus. Gemma nutzt nur eine Bibliothek und Deepseek-R1 hat das Thema nicht verstanden und schickt uns ins Internet auf irgendwelche Github-Seiten. In Summe funktioniert keiner der vorgeschlagenen Codes.
+Hier gibt es hervorragende Client Bibliotheken vom Kubernetes-Projekt, die man nutzen kann. Und es gibt sie auch schon seit vielen Jahren. Codellama, Llama, Falcon3 und Tulu3 wollen dazu schon mal ein Paket aus dem cosignwebhook benutzen, welches sie als RAG Resource bekommen haben. Die Ausgabe ist gut formatiert lesbar und teilweise mit Erklärungen geschmückt. Funktioniert nur nicht, weil cosignwebhook diese Funktion gar nicht bereitstellt. Dolphin3, Mistral und Qwen nutzen die korrekten Kubernetes Client Bibliotheken und geben ebenfalls formatierten Code aus. Gemma nutzt nur eine Bibliothek und DeepSeek-R1 hat das Thema nicht verstanden und schickt uns ins Internet auf irgendwelche Github-Seiten. In Summe funktioniert keiner der vorgeschlagenen Codes.
 
-Aufgabe 2:
+<b>Aufgabe 2:</b>
 
 <b>Schreibe ein Programm in Python zum Durchsuchen von Webseiten mit einer Tiefe von 3 und speichere die Inhalte als Markdown.</b>
 
-Hier nutzen alle LLM die Python Module request und BeautifulSoup. Codellama erklärt noch die Funktion, Programm funktioniert aber nicht. Deepseek-R1s Lösung funktioniert und speichert Markdown Files. Dolphin3 listet als Ausgabe die gefundenen Links, Falcon3 funktioniert nicht, Gemma3 tut so, hat aber keine Markdown Dateien erstellt. Llama3 ist ganz schlau und fragt uns am Eingabeprompt nach der URL, die durchsucht werden soll. Alle anderen hatten Beispiel-Urls im Code verwendet. Unterwegs verliert er aber diese Url beim Crawlen, weswegen es jede Menge Fehlermeldungen gab. Sah vielversprechend aus, müsste aber weiter untersucht werden. Mistral liefert sauberen Code ab, erklärt noch pip und das Ergebnis kann sich sehen lassen. Es werden nach und nach Markdown Dateien erstellt mit dem Inhalt der gewünschten URL und deren Links. Der Qwen Code ist fehlerhaft und auch Tulu3 funktioniert nicht. Wir haben also 2 Gewinner in der Sparte: Deepseek-R1 und Mistral
+Hier nutzen alle LLM die Python Module request und BeautifulSoup. Codellama erklärt noch die Funktion, Programm funktioniert aber nicht. DeepSeek-R1s Lösung funktioniert und speichert Markdown Files. Dolphin3 listet als Ausgabe die gefundenen Links, Falcon3 funktioniert nicht, Gemma3 tut so, hat aber keine Markdown Dateien erstellt. Llama3 ist ganz schlau und fragt uns am Eingabeprompt nach der URL, die durchsucht werden soll. Alle anderen hatten Beispiel-Urls im Code verwendet. Unterwegs verliert er aber diese Url beim Crawlen, weswegen es jede Menge Fehlermeldungen gab. Sah vielversprechend aus, müsste aber weiter untersucht werden. Mistral liefert sauberen Code ab, erklärt noch pip und das Ergebnis kann sich sehen lassen. Es werden nach und nach Markdown Dateien erstellt mit dem Inhalt der gewünschten URL und deren Links. Der Qwen Code ist fehlerhaft und auch Tulu3 funktioniert nicht. Wir haben also 2 Gewinner in der Sparte: DeepSeek-R1 und Mistral
 
-Aufgabe 3: 
+<b>Aufgabe 3:</b>
 
 <b>Suche alle yaml Dateien in einem Ordner mit bash und ersetze .spec.replicas: 1 mit 0</b>
 
@@ -131,12 +137,19 @@ Eine vermeintlich einfache Ausgabe aus der Praxis. Und so machen sich alle KIs a
 
 In dieser Sparte haben wir 2 Aufgaben aus dem Kubernetes-Betrieb, wie sie nahezu täglich auftauchen.
 
-Aufgabe 1:
+<b>Aufgabe 1:</b>
 
 <b>Liste alle Pods in einem Kubernetes Cluster auf, die nicht den Status Running oder Completed haben.</b>
 
 Codellama hat den korrekten Befehl für `kubectl`, es werden aber alle Pods aufgelistet, weil der Filter nicht funktioniert. 
-Deepseek-R1 philosphiert wieder mit sehr viel Text und erfindet den Befehl `kubectl get pods --where`. Funktioniert natürlich nicht. Dolphin3 verwendet yq und gibt die kompletten Pod Manifeste als yaml aus. Etwas übers Ziel hinausgeschossen, funktioniert aber. Die Antwort von Falcon3 ist kurz und bündig, und funktioniert nicht. Gemma3 hat keine Ahnung. Llama3 verwendet kubectl mit jsonpath und baut eine Schleife, funktioniert aber nicht. Mistral3 pipt die kubectl get pod Ausgabe gegen grep. Einfach, schmutzig, funktioniert. Hätte ich genauso gemacht. Qwen möchte ein --selector im kubectl verwenden. Gute Idee, funktioniert aber nicht. Tulu3 verwendet ebenfalls kubectl mit yq und liefert die korrekte Ausgabe. Die Gewinner sind also Dolphin3, Mistral3 und Tulu3.
+DeepSeek-R1 philosphiert wieder mit sehr viel Text und erfindet den Befehl `kubectl get pods --where`. Funktioniert natürlich nicht. Dolphin3 verwendet yq und gibt die kompletten Pod Manifeste als yaml aus. Etwas übers Ziel hinausgeschossen, funktioniert aber. Die Antwort von Falcon3 ist kurz und bündig, und funktioniert nicht. Gemma3 hat keine Ahnung. Llama3 verwendet kubectl mit jsonpath und baut eine Schleife, funktioniert aber nicht. Mistral3 pipt die kubectl get pod Ausgabe gegen grep. Einfach, schmutzig, funktioniert. Hätte ich genauso gemacht. Qwen möchte ein --selector im kubectl verwenden. Gute Idee, funktioniert aber nicht. Tulu3 verwendet ebenfalls kubectl mit yq und liefert die korrekte Ausgabe. Die Gewinner sind also Dolphin3, Mistral3 und Tulu3.
+
+<b>Aufgabe 2:</b>
+<b>Schreibe ein hochsicheres Deployment manifest für Kubernetes, um ein nginx:latest Image zu starten und auf Port 8080 verfügbar zu mache</b>
+
+Codellama schreibt ein ordentliches Deployment File. Als Sicherheitsfeature hat es eine Referenz zu einem ImagePullSecret, in das ich irgendwie die docker-registry-secret Credentials reinkriegen muss.
+DeepSeek-R1 erfindet die API `apiVersion: "k8s.io/v5"`, funktioniert also nicht. Dolphin rattert das yaml Manifest unformatiert runter. Immerhin verwendet es securityContext, wie man es sich vorstellt, mountet aber ein ServiceAccountToken, den es nicht gibt, funktioniert also nicht. Falcon hat ein Standard-Deployment-Manifest, der Hinweis auf Security wurde vollständig ignoriert, ähnlich ist es bei Gemma. Llama hat das Manifest mit securityContext, sieht gut aus. Mistral hat das ebenso gemacht, referenziert aber kommentarlos auf nicht vorhandene imagePullSecrets und serviceAccountName. Qwen hat das Standard-Manifest und setzt das Label `security: high`, mhmm, okay. Tulu3 hat kein Ergebnis. Hier gibt es keinen eindeutigen Gewinner.
+
 
 ### Golang2
 Die Ergebnisse sind bis jetzt nicht so befriedigend. Deswegen gibt es für Golang-Programmierung eine zweite Runde. Diesmal ohne RAG, weil das die Ergebnisse eher verfälscht hat. Man könnte auch sagen, man hat die KI aufs Glatteis geführt. Die blanken LLM sollen die Aufgabe nochmal ausführen und können sie diesmal auch sooft korrigieren wie sie möchten.
@@ -152,11 +165,11 @@ Dieses Model liefert tatsächlich aus dem Stand funktionierenden Code! Aber die 
 # Sicherheit
 
 Gleich nach der Veröffentlich von DeepSeek-R1 wurden Stimmen laut vom fehlenden Datenschutz und fehlender Einhaltung von EU-Richtlinien. Wir haben das früher immer [Security by Heise](https://www.heise.de/news/Datenschutz-bei-DeepSeek-Es-scheint-an-so-ziemlich-allem-zu-fehlen-10262697.html) genannt, wenn man Informationen zu Sicherheitsvorfälle aus der Zeitung entnimmt. 
-Folgerichtig gibt es schon die ersten Verbote wegen der kleinen grünen Chinesen, die im LLM wohnen. Genau wie die "Vermutung", dass diese in den 5G-Antennen von Huawei wohnen und heimlich nach China funken. Gefunden wurden sie freilich nie, aber das Verbot ist gesetzt.
+Folgerichtig gibt es schon die ersten Verbote wegen der kleinen grünen Chinesen, die im LLM wohnen. Genau wie die "Vermutung", dass diese in den 5G-Antennen von Huawei hausen und heimlich nach China funken. Gefunden wurden sie freilich nie, aber das Verbot ist gesetzt.
 
 Wie sieht es jetzt mit dem LLM aus? 
 
-These 1: Versteckter Schadcode im LLM.
+<b>These 1: Versteckter Schadcode im LLM.</b>
 
 Nun, die safetensors Dateien, aus denen das LLM besteht, kann man sich einzeln herunterladen und untersuchen. Mit Gradio kann man sogar ein Webinterface dafür bauen:
 
@@ -205,7 +218,7 @@ interface.launch(server_name="0.0.0.0",
 
 Auch die [Konfigurationsdatei des LLM](https://huggingface.co/deepseek-ai/DeepSeek-R1/blob/main/config.json) ist für DeepSeek-R1 online. Da kann man dann sehen, welche Datasets verwendet wurden. Da wird man dann feststellen, das das Basismodell deepseek_v3 schon sehr lange existiert und das Ganze auch einem weltweiten Standard unterliegt. Sonst wäre es auch gar nicht kompatibel.
 
-These 2: Das Model tut "nach Hause telefonieren". Der User wird ausspioniert und Daten werden nach China verschickt.
+<b>These 2: Das Model tut "nach Hause telefonieren". Der User wird ausspioniert und Daten werden nach China verschickt.</b>
 
 Nun, wir haben oben schon festgestellt, das LLM kann gar nicht telefonieren, da es selbst gar nicht kommunizieren kann.
 Auch dazu haben wir einen Versuchsaufbau getätigt. Ollama-Chatbot läuft in einem Container, in einem Pod, in einem Kubernetes-Cluster. Dort ist es netzwerkmässig isoliert. Um zu sehen, welcher Netzwerkverkehr von und zu diesem Container geht, müssen wir uns auf die dazugehörige Bridge aufschalten. Dazu folgendes Vorgehen:
