--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -170,7 +170,9 @@ Folgerichtig gibt es schon die ersten Verbote wegen der kleinen grünen Chinesen
 
 Wie sieht es jetzt mit dem LLM aus? 
 
-<b>These 1: Versteckter Schadcode im LLM.</b>
+<b>These 1:</b>
+
+<b>Versteckter Schadcode im LLM.</b>
 
 Nun, die safetensors Dateien, aus denen das LLM besteht, kann man sich einzeln herunterladen und untersuchen. Mit Gradio kann man sogar ein Webinterface dafür bauen:
 
@@ -219,7 +221,9 @@ interface.launch(server_name="0.0.0.0",
 
 Auch die [Konfigurationsdatei des LLM](https://huggingface.co/deepseek-ai/DeepSeek-R1/blob/main/config.json) ist für DeepSeek-R1 online. Da kann man dann sehen, welche Datasets verwendet wurden. Da wird man dann feststellen, das das Basismodell deepseek_v3 schon sehr lange existiert und das Ganze auch einem weltweiten Standard unterliegt. Sonst wäre es auch gar nicht kompatibel.
 
-<b>These 2: Das Model tut "nach Hause telefonieren". Der User wird ausspioniert und Daten werden nach China verschickt.</b>
+<b>These 2:</b>
+
+<b>Das Model tut "nach Hause telefonieren". Der User wird ausspioniert und Daten werden nach China verschickt.</b>
 
 Nun, wir haben oben schon festgestellt, das LLM kann gar nicht telefonieren, da es selbst gar nicht kommunizieren kann.
 Auch dazu haben wir einen Versuchsaufbau getätigt. Ollama-Chatbot läuft in einem Container, in einem Pod, in einem Kubernetes-Cluster. Dort ist es netzwerkmässig isoliert. Um zu sehen, welcher Netzwerkverkehr von und zu diesem Container geht, müssen wir uns auf die dazugehörige Bridge aufschalten. Dazu folgendes Vorgehen:
