--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -253,7 +253,7 @@ Nach dem Ausflug in die Welt des Kalten Krieges kommen wir nun endlich zum Ergeb
 
 Der Anwender agiert mit der KI und macht sie dadurch intelligenter, indem er etwa mitteilt, ob ein Ergebnis richtig oder falsch war. 
 
-Der Sieger nach Punkten heisst: Mistral3. Vive la France!
+Der Sieger nach Punkten heisst: <b>Mistral3. Vive la France!</b>
 
 Hätte ich jetzt tatsächlich nicht erwartet. Man kann Mistral auch [online](https://chat.mistral.ai/chat/) ausprobieren. Es ist superschnell und liefert auch unsere gewünschten Ergebnisse.
 
