--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -4,6 +4,7 @@ tag: inet
 title: KI Chatbots 2025 - der grosse Vergleich
 subtitle: DeepSeek-R1 & Co auf dem Heimcomputer im Eigentest
 date: 2025-02-08
+background: '/images/blog-polar-eumel.png'
 author: eumel8
 ---
 
