small change to rebuild site page

--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -220,7 +220,7 @@ interface.launch(server_name="0.0.0.0",
 {% endhighlight %}
 </details>
 
-Auch die [Konfigurationsdatei des LLM](https://huggingface.co/deepseek-ai/DeepSeek-R1/blob/main/config.json) ist für DeepSeek-R1 online. Da kann man dann sehen, welche Datasets verwendet wurden. Da wird man dann feststellen, das das Basismodell deepseek_v3 schon sehr lange existiert und das Ganze auch einem weltweiten Standard unterliegt. Sonst wäre es auch gar nicht kompatibel.
+Auch die [Konfigurationsdatei des LLM](https://huggingface.co/deepseek-ai/DeepSeek-R1/blob/main/config.json) ist für DeepSeek-R1 online. Da kann man dann sehen, welche Datasets verwendet wurden. Da wird man dann feststellen, das das Basismodell `deepseek_v3` schon lange existiert und das Ganze auch einem weltweiten Standard unterliegt. Sonst wäre es auch gar nicht kompatibel.
 
 <b>These 2:</b>
 
