--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -2,7 +2,7 @@
 layout: post
 tag: inet
 title: KI Chatbots 2025 - der grosse Vergleich
-subtitle: DeepSeek-R1 & Co auf dem Heimcomputer im Eigentest
+subtitle: DeepSeek-R1 und Co auf dem Heimcomputer im Eigentest
 date: 2025-02-08
 author: eumel8
 twitter: 'images/blog-eumel-de.png'
