extend prompting based in coursera course

--- a/_posts/2025-03-19-ai-tools-2025.md
+++ b/_posts/2025-03-19-ai-tools-2025.md
@@ -24,6 +24,14 @@ Der Begriff stammt eigentlich aus der Verhaltenstherapie und bedeutet soviel wie
 
 Eine andere Methode ist das Chaining, die Verkettung von Fragen und Antworten. Die meisten Chatbots haben das automatisch eingebaut, indem sie die Unterhaltung zwischenspeichern und dann in dem "Thread" beliebig den Faden wieder aufnehmen können. Wenn man selbst nicht kreativ ist, kann man auch den Chatbot fragen, welche Fragen denn zu diesem oder jenem Thema angebracht wären.
 
+Beliebt ist auch die Gliederungserweiterung. Aufgrund von Eingaben soll eine Gliederung mit Aufzählungspunkten erstellt werden. ChatGPT soll immer nach dem nächsten Punkt fragen. Dabei verliert die KI auch schon mal den Faden. Deshalb sollte man die KI fragen, dass sie uns fragen soll, was wir am Ende erreichen wollen. Auch [hier](https://paste.eumel.de/?5283b2a230016945#3i1VGHxKXoj1k1fu7CMfRaqV9jAudYq6zTavCa9fLCyZ) gerne nochmal ein Schweinebratendialog. 
+
+Und wem das alles zu fettig ist: Man kann ChatGPT auch seine Krankengeschichte erzählen und die Medikamente, die man nimmt. Die Beipackzettel liest sowieso niemand, ChatGPT kennt aber die Zutaten und kann überflüssiges entfernen.
+
+Apropos: Auch aus E-Mails, die man ChatGPT vor den Prompt wirft, kann die KI bitten, diese zu filtern und überflüssige Informationen entfernen.
+
+Der Kreativität sind da keine Grenzen gesetzt. Es gibt schon Interessengruppen, etwa auf [meetup.com](https://www.meetup.com/find/?keywords=chatgpt&source=EVENTS), die sich über Möglichkeiten austauschen. Was passiert zum Beispiel, wenn sich eine KI mit einer anderen unterhält?
+
 # LMArena
 
 Herauszufinden, welches LLM jetzt am besten zu seinen Bedürfnissen passt, kann schon eine Herausforderung sein. Auch wenn weiter ChatGPT der Platzhirsch bleibt, gibt es noch einige mehr Chatbots online:
