--- a/_posts/2025-05-24-wallabag.md
+++ b/_posts/2025-05-24-wallabag.md
@@ -79,4 +79,60 @@ podSecurityContext: {}
 securityContext: {}
 ```
 
-helm -n wallabag upgrade -i wallabag -f my-values.yaml . --create-namespace
+install/upgrade:
+
+```bash
+helm -n wallabag upgrade -i wallabag -f my-values.yaml oci://ghcr.io/eumel8/charts/wallabag:0.1.2 --create-namespace
+```
+
+Danach kann man sich im Browser unter der URL seines Ingresses, also etwa https://wallabag1.eumel.de mit dem Standard Benutzer `wallabag/wallabag` anmelden. 
+
+# Imports
+
+Wie kommen jetzt die Bookmarks etwa von Diigo nach Wallabag? Solange der Webdienst von denen noch online ist, kann man unter `tools` die Bookmarks exportieren. Ich habe die Option `Firefox` gewählt, und bekomme nach einiger Zeit eine zip-Datei mit einer HTML-Seite zum Download angeboten. 
+
+Diese HTML-Seite kann man dann in Firefox im Lesezeichen-Menue importieren. Keine Sorge, es wird automatisch ein neuer Ordner erstellt, in dem sich dann die importieren Diigo-Lesezeichen befinden. 
+
+Diese kann man dann wiederum als json Datei exportieren. Die Json-Datei brauch man dann in Wallabag. Im User-Menu gibt es mehrere Import-Optionen. Wir verwenden Firefox-Import und laden die json Datei hoch. 
+
+Danach kann es mehrere Minuten dauern, je nach Anzahl der Bookmarks. Von einem Error 500 brauch man sich nicht abschrecken zu lassen. Ist die Datei erstmal hochgeladen, wird sie im Hintergrund weiter von Wallabag prozessiert. Also am besten erstmal einen Kaffee trinken.
+
+Nach einiger Zeit kann man die Seite neu besuchen und es sieht dann vielleicht so aus:
+
+<img src="/images/2025-05-24_1.png" />
+
+Die Bookmarks wurden alle richtig erkannt, auch die Tags sind alle da. Wallabag versucht eine Vorschau pro Seite zu erstellen, ist schon fast zu viel des Guten. Bei manchen Bookmark stimmte der Timestamp nicht. Sie waren viel älter als angezeigt. Ich vermute mal, dass sie so alt waren, dass es das Feld `createDate` noch gar nicht gab. Muss man damit leben, wenn diese Bookmarks überhaupt noch auf ein gültiges Ziel verweisen. Wenn also kein Vorschaubild da ist, ist das schon mal ein gutes Zeichen, dass mit dem Ziel irgendwas nicht stimmt.
+
+# Mobile App
+
+Auch ein nettes Feature: In den Usereinstellungen ist ein QR-Code mit der Konfiguration seiner Wallabag-Instanz für die Mobile App
+
+# Wallabagger
+
+Das Addon für Firefox findet man [hier](https://addons.mozilla.org/de/firefox/addon/wallabagger/), vergleichen kann man immer mit dem Source-Code [hier](https://github.com/wallabag/wallabagger). Es gibt noch etliche andere Versionen im Addon-Marktplat, da muss etwas aufpassen.
+
+Wallabagger sollte nach der Installation ein Setup-Menü öffnen. Hier brauch man ein paar Daten aus der Wallabag-Installation. Also gehen wir dahin zurück, loggen uns mit dem Standard-User ein und erstellen am besten einen neuen User, mit dem wir uns dann einloggen und rechts im User-Menü einen API-Client erstellen:
+
+
+<img src="/images/2025-05-24_2.png" />
+
+Die generierten Daten traggen wir dann im Wallabagger ein und klicken auf `Token holen`:
+
+<img src="/images/2025-05-24_3.png" />
+
+Danach sollten alle Felder grün sein und Wallabagger ist mit Wallabag verbunden.
+
+
+# Fazit
+
+Was Wallabaggen ist auf jeden Fall eine Umstellung. Ich meine, ich bin seit 2012 bei Diigo, da hat man sich an die spartane Bedienung und auch das "neue" Webdesign gewöhnt. Wallabag kommt eher an Pocket heran und so werden wohl viele Nutzer jetzt umsteigen, nachdem Pocket eingestellt wurde. 
+
+Das Picken der Webseiten geht ganz einfach, wenn man das Plugin in der Browserleiste einfach fixiert hat und auf der zu bookmarkenden Seite draufklickt, einen Tag vergibt und dann entweder diese archiviert oder mit dem Stern hervorhebt.
+
+Im Wallabag selber ist es sehr unübersichtlich. Man kann die maximale Bookmarks pro Seite auf 200 stellen und dann oben die Suchleiste nutzen, um etwas zu finden. Das geht eigentlich sehr gut. Und man hat noch die Tags, die einwandfrei übernommen wurden. Man kann hier auch Bookmarks hinzzufügen, wenn man das Browser-Plugin nicht nützen möchte oder kann.
+
+Happy Wallabag.
+
+Achso, Thema Backup: Wie schon erwähnt, liegen alle Daten in der SQLLite Datenbank. Kann man leicht backupen. Oben rechts im Menü gibt es auch eine Export-Funktion in etliche Formate, wenn man wieder weg will. Das wars.
+
+
