github action wallabag

--- a/_posts/2025-05-24-wallabag.md
+++ b/_posts/2025-05-24-wallabag.md
@@ -135,4 +135,4 @@ Happy Wallabag.
 
 Achso, Thema Backup: Wie schon erwähnt, liegen alle Daten in der SQLLite Datenbank. Kann man leicht backupen. Oben rechts im Menü gibt es auch eine Export-Funktion in etliche Formate, wenn man wieder weg will. Das wars.
 
-
+Und direkt noch ein Nachtrag: Bei über 1000 gespeicherten Links über 10 Jahre geht im Internet natürlich schon mal was verloren. Um nicht jeden Link einzeln zu überprüfen, gibt es [hier ein Github Action](https://github.com/eumel8/wallabag-checklinks), was das periodisch oder einmalig tut. Kaputte Links werden mit `dead` markiert.
