ai thriller & film

--- a/_posts/2025-02-15-ai-commit.md
+++ b/_posts/2025-02-15-ai-commit.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tag: inet
+tag: ai
 title: AI Commit
 subtitle: Künstliche Unterstützung bei der täglichen Arbeit
 date: 2025-02-15
