--- a/_posts/2025-03-19-ai-tools-2025.md
+++ b/_posts/2025-03-19-ai-tools-2025.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tag: inet
+tag: ai
 title: KI Werkzeugkiste 2025 - der grosse Überblick
 subtitle: Geht es noch ohne Roboter?
 date: 2025-03-19
