feat: add custom styles and backgrounds for blog posts
This commit introduces a new stylesheet (eumelnet.css) that
overwrites styles from the startbootstrap-clean-blog theme.
Additionally, background images are set for multiple blog posts
to enhance the visual appeal of the site.

--- a/_posts/2025-02-15-ai-commit.md
+++ b/_posts/2025-02-15-ai-commit.md
@@ -5,6 +5,7 @@ title: AI Commit
 subtitle: Künstliche Unterstützung bei der täglichen Arbeit
 date: 2025-02-15
 author: eumel8
+background: '/images/ai-commit.png?4362984378'
 twitter: 'images/blog-eumel-de.png?4362984378'
 ---
 
