--- a/_posts/2025-03-19-ai-tools-2025.md
+++ b/_posts/2025-03-19-ai-tools-2025.md
@@ -5,6 +5,7 @@ title: KI Werkzeugkiste 2025 - der grosse Überblick
 subtitle: Geht es noch ohne Roboter?
 date: 2025-03-19
 author: eumel8
+background: '/images/ki-werkzeugkiste.png?4362984378'
 twitter: 'images/blog-eumel-de.png?4362984378'
 ---
 
