--- a/_posts/2025-05-24-wallabag.md
+++ b/_posts/2025-05-24-wallabag.md
@@ -5,6 +5,7 @@ title: Wallabag
 subtitle: Bookmark Dienst im Eigenbau
 date: 2025-05-24
 author: eumel8
+background: '/images/wallabag.jpg?4362984378'
 ---
 
 # Intro
