--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -5,6 +5,7 @@ title: KI Chatbots 2025 - der grosse Vergleich
 subtitle: DeepSeek-R1 und Co auf dem Heimcomputer im Eigentest
 date: 2025-02-08
 author: eumel8
+background: '/images/ai-chatbots4.png?4362984378'
 twitter: 'images/blog-eumel-de.png?4362984378'
 ---
 
